# 2025-ashes-gpulife

./: .gitignore  CMakeLists.txt  LICENCE  README-program-arguments.md  README.md  compile.sh  configure.sh  gol-run-with-defaults.sh  run.sh
AN5D/16384/: Makefile
AN5D/2048/: Makefile
AN5D/4096/: Makefile
AN5D/8192/: Makefile
cluster-experiments/: general_job_generation.py  generate-final-measurements.py  launch-workers-on.sh  result_analysis.py  results_abstraction.py  run-all-experiments.sh
cluster-experiments/final-measurements/_scripts/: best-case-reduced-work-on-other-grids--part_1.sh  final-all--part_1.sh  reduced-work--part_1.sh
cluster-experiments/final-measurements/ampere/: an5d.out  job-143063.out  job-144323.out  job-144326.out
cluster-experiments/final-measurements/hopper/: an5d.out  job-143064.out  job-144324.out  job-144327.out
cluster-experiments/final-measurements/volta/: an5d.out  job-143062.out  job-144322.out  job-144325.out
cluster-experiments/internal-scripts/: run-one-exp.sh
src/: CMakeLists.txt  main.cpp
src/algorithms/_shared/: common_grid_types.hpp
src/algorithms/cpu-bitwise-general/: gol_cpu_bitwise_general.hpp
src/algorithms/cpu-bitwise-general-naive/: gol_cpu_bitwise_general_naive.hpp
src/algorithms/cpu-naive/: gol_cpu_naive.hpp
src/algorithms/cuda-naive/: models.hpp  (+2 more)
src/debug_utils/: diff_grid.hpp  pretty_print.cpp  pretty_print.hpp
src/infrastructure/: algorithm.hpp  algorithm_repository.hpp  colors.cpp  colors.hpp  data_loader.hpp  experiment_manager.hpp  experiment_params.hpp  grid.hpp  runner.hpp  timer.hpp
(+35 files in other folders)
